# EyeTracking-Algorithm-CPP

./: .gitignore  CMakeLists.txt  EyeCenter.cpp  EyeCenter.h  EyeCorner.h  README.md  VideoStream.h  constants.h  main.cpp  makefile  utils.cpp  utils.h
helper/: EyeCenter.hpp  EyeCorner.hpp  VideoStream.hpp  constants.hpp  helper.hpp  utils.hpp
